# file_transmission

./: .gitignore
ClientApp/: CMakeLists.txt
ClientApp/include/: client.h
ClientApp/src/: CMakeLists.txt  client.cpp  main.cpp
ServerApp/: CMakeLists.txt
ServerApp/include/: background.h  server.h
ServerApp/src/: CMakeLists.txt  background.cpp  main.cpp  server.cpp
